--- a/ComGeo.vcxproj
+++ b/ComGeo.vcxproj
@@ -115,6 +115,7 @@
   <ItemGroup>
     <ClCompile Include="ComGeo.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="point.cpp" />
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="ComGeo.h" />
@@ -124,6 +125,9 @@
   </ItemGroup>
   <ItemGroup>
     <QtRcc Include="ComGeo.qrc" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="point.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
