--- a/ComGeo.vcxproj.filters
+++ b/ComGeo.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="ComGeo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="point.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="ComGeo.h">
@@ -51,5 +54,10 @@
     <QtRcc Include="ComGeo.qrc">
       <Filter>Resource Files</Filter>
     </QtRcc>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="point.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
