--- a/ComGeo.vcxproj.filters
+++ b/ComGeo.vcxproj.filters
@@ -28,6 +28,9 @@
       <Extensions>moc;h;cpp</Extensions>
       <SourceControlFiles>False</SourceControlFiles>
     </Filter>
+    <Filter Include="input Files">
+      <UniqueIdentifier>{0e3576c1-22bb-4bfd-8b5f-74ab746c3333}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -39,14 +42,32 @@
     <ClCompile Include="point.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NumberEntry.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="utility.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="2DGeomView.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="ComGeo.h">
       <Filter>Header Files</Filter>
     </QtMoc>
+    <QtMoc Include="NumberEntry.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="2DGeomView.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="ComGeo.ui">
+      <Filter>Form Files</Filter>
+    </QtUic>
+    <QtUic Include="NbrNodeInput.ui">
       <Filter>Form Files</Filter>
     </QtUic>
   </ItemGroup>
@@ -59,5 +80,16 @@
     <ClInclude Include="point.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="utility.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="DataSets\pointSet1.dat">
+      <Filter>input Files</Filter>
+    </None>
+    <None Include="DataSets\Polygon1.dat">
+      <Filter>input Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
